README.md 캡쳐 이미지 추가

--- a/me.html
+++ b/me.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5">
-						<img class="about-img" src="images/about.jpeg" alt="" width="430" height="600">
+						<img class="about-img" src="images/about.jpg" alt="" width="430" height="500">
 					</div>
 					<div class="col-md-6 col-md-push-1">
 						<div class="about-me">
@@ -56,7 +56,6 @@
 								<p class="git">
 									Github<br>
 									<a href="https://github.com/pyheejin?tab=repositories">https://github.com/pyheejin?tab=repositories</a><br>
-									<a href="https://github.com/HeeeeeJinJeong?tab=repositories">https://github.com/HeeeeeJinJeong?tab=repositories</a>
 								</p>
 							</div>
 						</div>
